Python/QPython/.pip/pip.log
------------------------------------------------------------
 run on Fri May  8 21:34:04 2015
Downloading/unpacking pil

  Running setup.py egg_info for package pil

    Hello there!

    ----------------------------------------

    Traceback (most recent call last):

      File "<string>", line 16, in <module>

      File "/storage/emulated/0/com.hipipal.qpyplus/cache/pip-build/pil/setup.py", line 182

        print "--- using Tcl/Tk libraries at", TCL_ROOT

                                            ^

    SyntaxError: invalid syntax

    Complete output from command python setup.py egg_info:

    Hello there!

----------------------------------------

Traceback (most recent call last):

  File "<string>", line 16, in <module>

  File "/storage/emulated/0/com.hipipal.qpyplus/cache/pip-build/pil/setup.py", line 182

    print "--- using Tcl/Tk libraries at", TCL_ROOT

                                        ^

SyntaxError: invalid syntax

----------------------------------------

Command python setup.py egg_info failed with error code 1 in /storage/emulated/0/com.hipipal.qpyplus/cache/pip-build/pil

Exception information:
Traceback (most recent call last):
  File "/data/data/com.hipipal.qpy3/files/lib/python3.2/site-packages/pip-1.2.1-py3.2.egg/pip/basecommand.py", line 107, in main
    status = self.run(options, args)
  File "/data/data/com.hipipal.qpy3/files/lib/python3.2/site-packages/pip-1.2.1-py3.2.egg/pip/commands/install.py", line 256, in run
    requirement_set.prepare_files(finder, force_root_egg_info=self.bundle, bundle=self.bundle)
  File "/data/data/com.hipipal.qpy3/files/lib/python3.2/site-packages/pip-1.2.1-py3.2.egg/pip/req.py", line 1042, in prepare_files
    req_to_install.run_egg_info()
  File "/data/data/com.hipipal.qpy3/files/lib/python3.2/site-packages/pip-1.2.1-py3.2.egg/pip/req.py", line 236, in run_egg_info
    command_desc='python setup.py egg_info')
  File "/data/data/com.hipipal.qpy3/files/lib/python3.2/site-packages/pip-1.2.1-py3.2.egg/pip/util.py", line 612, in call_subprocess
    % (command_desc, proc.returncode, cwd))
pip.exceptions.InstallationError: Command python setup.py egg_info failed with error code 1 in /storage/emulated/0/com.hipipal.qpyplus/cache/pip-build/pil
